--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+git init
+git add .
+git commit -m "Initial commit"
+git remote add origin https://github.com/username/repo-name.git
+git push -u origin main
 *.iml
 .gradle
 /local.properties
